// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`serializers serializes a build 1`] = `
Object {
  "app": "test",
  "canary": undefined,
  "created": "2018-11-28T03:54:35.112Z",
  "id": 1,
  "namespace": null,
  "releaseId": null,
  "released": false,
  "removed": false,
  "stage": "review",
  "status": "UNRELEASED",
  "values": Object {},
  "version": "v1",
}
`;

exports[`serializers serializes a release 1`] = `
Object {
  "app": "test",
  "canary": null,
  "created": "2013-10-23T07:00:00.000Z",
  "id": 3,
  "namespace": null,
  "releaseId": 6,
  "released": true,
  "removed": false,
  "stage": "review",
  "status": "PENDING",
  "values": Object {},
  "version": "v2",
}
`;

exports[`serializers serializes an app 1`] = `
Object {
  "config": Object {
    "chart": "service",
  },
  "created": "2018-11-28T03:55:02.675Z",
  "id": 1,
  "manifest": Object {
    "config": Object {
      "chart": "service",
    },
    "name": "test",
    "stages": Array [],
  },
  "modified": "2018-11-28T03:55:02.754Z",
  "name": "test",
  "stages": Array [],
}
`;
